# portalTransparenciaEscolas

./: .dockerignore  .gitignore  Dockerfile  README.md  exemplo.env  pyproject.toml
.github/workflows/: ci.yaml
.streamlit/: config.toml
src/: app.py
src/backEnd/: __init__.py  etl.py
src/frontEnd/: __init__.py  graficos.py  ui.py
src/frontEnd/styles/: styles.css
